--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,17 @@
                 <version>3.1.2</version>
             </plugin>
 
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>2.39.0</version>
+                <configuration>
+                    <java>
+                        <palantirJavaFormat/>
+                    </java>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
